--- a/views/shop.html
+++ b/views/shop.html
@@ -6,6 +6,9 @@
 <div class="product-grid__item   grid__item one-half large--one-third" >
 
     <!--Repeat over your data and display it below -->
+<div ng-repeat= 'shop in shoppingList'>
+  <product-directive></product-directive>
+</div>
 
-    
+
 </div>
